# parsepy

./: .gitignore  README.md  pyproject.toml
src/parsepy/: __init__.py  base_parser.py
src/parsepy/basic_elements/: __init__.py  find_index.py  take_include.py  take_n.py  take_until.py  take_while.py
src/parsepy/choice_combinators/: __init__.py  all_of.py  one_of.py  permutation_of.py
src/parsepy/sequence_combinators/: __init__.py  take_around.py  take_between.py
src/parsepy/str_tags/: new_line.py
tests/aoc24/: test_day1.py
tests/basic_elements/: test_take_include.py  test_take_n.py  test_take_until.py  test_take_while.py
tests/choice_combinators/: test_all_of.py  test_one_of.py  test_permutation_of.py
tests/sequence_combinators/: test_take_around.py  test_take_between.py
